--- a/views/home.html
+++ b/views/home.html
@@ -7,6 +7,8 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <header><i class="fa-solid fa-bars"></i></header>
+  <main></main>
+    <footer></footer>
 </body>
 </html>
