--- a/views/home.html
+++ b/views/home.html
@@ -4,11 +4,31 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css">
+        <link rel="stylesheet" href="css/styles.css">
     <title>Document</title>
 </head>
-<body>
-    <header><i class="fa-solid fa-bars"></i></header>
-  <main></main>
+<body class="homebody">
+  <header>
+  <a href="/"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ60-A0FP2S-Axx385gkvGGhnUWl8uDxPWFWGuY3g4vjcCmukzr7eqArX_j6ibDO5YfMIE&usqp=CAU" alt="fotologo" class="imglogo"></a>
+ <form class="searchbar">
+    <input name="searchbarhome" type="text" class="searchbarhome" placeholder="Buscá por producto, marca, categoría ..."></form>
+    <button type="submit"></button>
+    </form>
+    <a class="searchiconhome"><i class="fas fa-search"></i></a>
+    <a class="solidbarhome"><i class="fas fa-bars"></i></a>
+   <div class="loginregisterhome"><a class="loginhomebutton" href="/login">Login</a><a class="registerhomebutton" href="/register">/Register</a> <a class="shopiconhome" href="#"><i class="fas fa-shopping-basket"></i></a></div>
+  </header>
+  <main>
+    <section class="sliderhome"></section>
+    <div class="containerhome">
+      <ul class="sliderhome">
+        <li id="slide1"><img src="" alt="imagen1"></li>
+      </ul>
+    </div>
+    <section class="productoshome"></section>
+  </main>
     <footer></footer>
 </body>
-</html>
+</html> 
