--- a/views/login.html
+++ b/views/login.html
@@ -11,7 +11,7 @@
     <title>Login</title>
 </head>
 
-<body>
+<body class="loginbody">
     <div class="container">
         <div class="wrapper">
             <div class="title"><span>Login</span></div>
