--- a/views/home.html
+++ b/views/home.html
@@ -10,7 +10,7 @@
     <title>Document</title>
 </head>
 <body class="homebody">
-  <header>
+  <header class="headerhome">
   <a href="/"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ60-A0FP2S-Axx385gkvGGhnUWl8uDxPWFWGuY3g4vjcCmukzr7eqArX_j6ibDO5YfMIE&usqp=CAU" alt="fotologo" class="imglogo"></a>
  <form class="searchbar">
     <input name="searchbarhome" type="text" class="searchbarhome" placeholder="Buscá por producto, marca, categoría ..."></form>
@@ -22,9 +22,22 @@
   </header>
   <main>
     <section class="sliderhome"></section>
-    <div class="containerhome">
+    <div class="containersliderhome">
       <ul class="sliderhome">
-        <li id="slide1"><img src="" alt="imagen1"></li>
+        <li id="slide1"><img class="img1" src="https://ithk-pro-itmall-item.oss-cn-hongkong.aliyuncs.com/2/product/0ZXPTW252503HBKX/0ZXPTW252503HBKX-pdp-1.jpg?x-oss-process=image/resize,m_pad,h_750,w_600/auto-orient,1/quality,Q_80" alt="imagen1"></li>
+        <li id="slide2"><img class="img2" src="https://ithk-pro-itmall-item.oss-cn-hongkong.aliyuncs.com/2/product/0ZXPTW252004HBKX/0ZXPTW252004HBKX-pdp-1.jpg?x-oss-process=image/resize,m_pad,h_750,w_600/auto-orient,1/quality,Q_80" alt="imagen2"></li>
+        <li id="slide3"><img class="img3" src="https://ithk-pro-itmall-item.oss-cn-hongkong.aliyuncs.com/2/product/0PXSPW253001HBLL/0PXSPW253001HBLL-pdp-1.jpg?x-oss-process=image/resize,m_pad,h_750,w_600/auto-orient,1/quality,Q_80" alt="imagen3"></li>
+        <li id="slide4"><img class="img4" src="https://ithk-pro-itmall-item.oss-cn-hongkong.aliyuncs.com/2/product/0PXSTW231001HBLZ/0PXSTW231001HBLZ-pdp-1.jpg?x-oss-process=image/resize,m_pad,h_750,w_600/auto-orient,1/quality,Q_80" alt="imagen4"></li>
+        <li id="slide5"><img class="img5" src="https://ithk-pro-itmall-item.oss-cn-hongkong.aliyuncs.com/2/product/0ZXPTM152017IBKX/0ZXPTM152017IBKX-pdp-2.jpg?x-oss-process=image/resize,m_pad,h_750,w_600/auto-orient,1/quality,Q_80" alt="imagen5"></li>
+        <li id="slide6"><img class="img6" src="https://ithk-pro-itmall-item.oss-cn-hongkong.aliyuncs.com/2/product/0ZXSWW215008IBKX/0ZXSWW215008IBKX-pdp-2.jpg?x-oss-process=image/resize,m_pad,h_750,w_600/auto-orient,1/quality,Q_80" alt="imagen6"></li>
+      </ul>
+      <ul class="menuhome">
+<li><a href="#slide1">1</a></li>
+<li><a href="#slide2">2</a></li>
+<li><a href="#slide3">3</a></li>
+<li><a href="#slide4">4</a></li>
+<li><a href="#slide5">5</a></li>
+<li><a href="#slide6">6</a></li>
       </ul>
     </div>
     <section class="productoshome"></section>
