--- a/views/carrito.html
+++ b/views/carrito.html
@@ -5,59 +5,111 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/carritoStyles.css">
+    <link rel="stylesheet" href="https://fontawesome.com/icons/">
     <title>Document</title>
 </head>
 <body>
     <div class="container">    
         <header>
             <div class="header-carrito">
-                <div>icono</div>
+                <i class="fa-solid fa-align-justify"></i>
                 <div>logo</div>
+                <div class="main-carrito-encabezado">
+                    <h1 class="main-carrito-titulo">Productos</h1>
+    
+                </div>
             </div>
         </header>
         <main class="main-carrito">
-            <div class="main-carrito-encabezado">
-                <h1 class="main-carrito-titulo">Carrito</h1>
-                <div class="main-carrito-subtitulos">   
-                    <p>Items</p>
-                    <p>Total</p>
+
+            <div class="main-carrito-productos">
+
+                <div class="main-productos">
+                    <div class="main-carrito-descripcion">
+                        <img src="https://ithk-pro-itmall-item.oss-cn-hongkong.aliyuncs.com/2/product/0ZXPTW252004HBKX/0ZXPTW252004HBKX-pdp-1.jpg?x-oss-process=image%2Fresize%2Cm_pad%2Ch_750%2Cw_600%2Fauto-orient%2C1%2Fquality%2CQ_80&fbclid=IwAR2OHumYTFycgOIHx5T56pywR5W9Ixk735sBlyxgvs92ueDE5KLBheXCv-A" alt="img">
+                        <p>Descripcion</p>
+                        <p>Precio</p>
+                    </div>
+                    <div class="main-carrito-descripcion">
+                        <img src="https://ithk-pro-itmall-item.oss-cn-hongkong.aliyuncs.com/2/product/0ZXPTW252503HBKX/0ZXPTW252503HBKX-pdp-1.jpg?x-oss-process=image%2Fresize%2Cm_pad%2Ch_750%2Cw_600%2Fauto-orient%2C1%2Fquality%2CQ_80&fbclid=IwAR13phmA_sCu_CVWZRps21txYo396HBgyD1J7TQjueHO_epCVIdB0eckTRI" alt="img">
+                        <p>Descripcion</p>
+                        <p>Precio</p>
+                    </div>
+                    <div class="main-carrito-descripcion">
+                        <img src="https://ithk-pro-itmall-item.oss-cn-hongkong.aliyuncs.com/2/product/0PXSPW253001HBLL/0PXSPW253001HBLL-pdp-1.jpg?x-oss-process=image%2Fresize%2Cm_pad%2Ch_750%2Cw_600%2Fauto-orient%2C1%2Fquality%2CQ_80&fbclid=IwAR3WQRxHWMXP937Wv_q0sd4GGPP-vdX6mUDdND4oz_lu11ICAX20vQiKuxo" alt="img">
+                        <p>Descripcion</p>
+                        <p>Precio</p>
+                    </div> 
+                    <div class="main-carrito-descripcion">
+                        <img src="https://ithk-pro-itmall-item.oss-cn-hongkong.aliyuncs.com/2/product/0PXSTW231001HBLZ/0PXSTW231001HBLZ-pdp-1.jpg?x-oss-process=image%2Fresize%2Cm_pad%2Ch_750%2Cw_600%2Fauto-orient%2C1%2Fquality%2CQ_80&fbclid=IwAR0cxfEatOEQg8M6AdlSzSWjonVou9gXkpPsLzE6pJf27v-Q0wBYot15JAY" alt="img">
+                        <p>Descripcion</p>
+                        <p>Precio</p>
+                    </div>
+                    <div class="main-carrito-descripcion">
+                        <img src="https://ithk-pro-itmall-item.oss-cn-hongkong.aliyuncs.com/2/product/0PXSTW231001HBLZ/0PXSTW231001HBLZ-pdp-1.jpg?x-oss-process=image%2Fresize%2Cm_pad%2Ch_750%2Cw_600%2Fauto-orient%2C1%2Fquality%2CQ_80&fbclid=IwAR0cxfEatOEQg8M6AdlSzSWjonVou9gXkpPsLzE6pJf27v-Q0wBYot15JAY" alt="img">
+                        <p>Descripcion</p>
+                        <p>Precio</p>
+                    </div>
+                    <div class="main-carrito-descripcion">
+                        <img src="https://ithk-pro-itmall-item.oss-cn-hongkong.aliyuncs.com/2/product/0PXSTW231001HBLZ/0PXSTW231001HBLZ-pdp-1.jpg?x-oss-process=image%2Fresize%2Cm_pad%2Ch_750%2Cw_600%2Fauto-orient%2C1%2Fquality%2CQ_80&fbclid=IwAR0cxfEatOEQg8M6AdlSzSWjonVou9gXkpPsLzE6pJf27v-Q0wBYot15JAY" alt="img">
+                        <p>Descripcion</p>
+                        <p>Precio</p>
+                    </div>
+                    <div class="main-carrito-descripcion">
+                        <img src="https://ithk-pro-itmall-item.oss-cn-hongkong.aliyuncs.com/2/product/0PXSTW231001HBLZ/0PXSTW231001HBLZ-pdp-1.jpg?x-oss-process=image%2Fresize%2Cm_pad%2Ch_750%2Cw_600%2Fauto-orient%2C1%2Fquality%2CQ_80&fbclid=IwAR0cxfEatOEQg8M6AdlSzSWjonVou9gXkpPsLzE6pJf27v-Q0wBYot15JAY" alt="img">
+                        <p>Descripcion</p>
+                        <p>Precio</p>
+                    </div>
+                    <div class="main-carrito-descripcion">
+                        <img src="https://ithk-pro-itmall-item.oss-cn-hongkong.aliyuncs.com/2/product/0PXSTW231001HBLZ/0PXSTW231001HBLZ-pdp-1.jpg?x-oss-process=image%2Fresize%2Cm_pad%2Ch_750%2Cw_600%2Fauto-orient%2C1%2Fquality%2CQ_80&fbclid=IwAR0cxfEatOEQg8M6AdlSzSWjonVou9gXkpPsLzE6pJf27v-Q0wBYot15JAY" alt="img">
+                        <p>Descripcion</p>
+                        <p>Precio</p>
+                    </div>
+                    <div class="main-carrito-descripcion">
+                        <img src="https://ithk-pro-itmall-item.oss-cn-hongkong.aliyuncs.com/2/product/0PXSTW231001HBLZ/0PXSTW231001HBLZ-pdp-1.jpg?x-oss-process=image%2Fresize%2Cm_pad%2Ch_750%2Cw_600%2Fauto-orient%2C1%2Fquality%2CQ_80&fbclid=IwAR0cxfEatOEQg8M6AdlSzSWjonVou9gXkpPsLzE6pJf27v-Q0wBYot15JAY" alt="img">
+                        <p>Descripcion</p>
+                        <p>Precio</p>
+                    </div>
                 </div>
-            </div>
-            <div class="main-productos">
-                <div class="main-carrito-descripcion">
-                    <img src="" alt="img">
-                    <p>Descripcion</p>
-                    <p>Precio</p>
-                </div>
-                <div class="main-carrito-descripcion">
-                    <img src="" alt="img">
-                    <p>Descripcion</p>
-                    <p>Precio</p>
-                </div>
-                <div class="main-carrito-descripcion">
-                    <img src="" alt="img">
-                    <p>Descripcion</p>
-                    <p>Precio</p>
-                </div> 
             </div>     
         </main>
         <footer class="footer-recomendados">
             <h2>Productos recomendados</h2>
+            <div class="footer-slider">
+            <ul class="footer-productos">
+                <li class="footer-producto">    
+                    
+                    <img src="https://ithk-pro-itmall-item.oss-cn-hongkong.aliyuncs.com/2/product/0PXSTW231001HBLZ/0PXSTW231001HBLZ-pdp-1.jpg?x-oss-process=image%2Fresize%2Cm_pad%2Ch_750%2Cw_600%2Fauto-orient%2C1%2Fquality%2CQ_80&fbclid=IwAR0cxfEatOEQg8M6AdlSzSWjonVou9gXkpPsLzE6pJf27v-Q0wBYot15JAY" alt="footer-product">
+                </li>
+                <li class="footer-producto">
+                  
+                    <img src="https://ithk-pro-itmall-item.oss-cn-hongkong.aliyuncs.com/2/product/0ZXPTW252004HBKX/0ZXPTW252004HBKX-pdp-1.jpg?x-oss-process=image%2Fresize%2Cm_pad%2Ch_750%2Cw_600%2Fauto-orient%2C1%2Fquality%2CQ_80&fbclid=IwAR2OHumYTFycgOIHx5T56pywR5W9Ixk735sBlyxgvs92ueDE5KLBheXCv-A" alt="footer-product">
+                </li>
+                <li class="footer-producto">
+               
+                    <img src="https://ithk-pro-itmall-item.oss-cn-hongkong.aliyuncs.com/2/product/0ZXPTW252503HBKX/0ZXPTW252503HBKX-pdp-1.jpg?x-oss-process=image%2Fresize%2Cm_pad%2Ch_750%2Cw_600%2Fauto-orient%2C1%2Fquality%2CQ_80&fbclid=IwAR13phmA_sCu_CVWZRps21txYo396HBgyD1J7TQjueHO_epCVIdB0eckTRI" alt="footer-product">
+                </li>
+            </ul>
+        </div>
+        </footer>
+
+        <!-- <footer class="footer-recomendados">
+            <h2>Productos recomendados</h2>
             <div class="footer-productos">
                 <div class="footer-producto">
                     <p>Descripcion del producto</p>
-                    <img src="" alt="footer-product">
+                    <img src="https://ithk-pro-itmall-item.oss-cn-hongkong.aliyuncs.com/2/product/0PXSTW231001HBLZ/0PXSTW231001HBLZ-pdp-1.jpg?x-oss-process=image%2Fresize%2Cm_pad%2Ch_750%2Cw_600%2Fauto-orient%2C1%2Fquality%2CQ_80&fbclid=IwAR0cxfEatOEQg8M6AdlSzSWjonVou9gXkpPsLzE6pJf27v-Q0wBYot15JAY" alt="footer-product">
                 </div>
                 <div class="footer-producto">
                     <p>Descripcion del producto</p>
-                    <img src="" alt="footer-product">
+                    <img src="https://ithk-pro-itmall-item.oss-cn-hongkong.aliyuncs.com/2/product/0ZXPTW252004HBKX/0ZXPTW252004HBKX-pdp-1.jpg?x-oss-process=image%2Fresize%2Cm_pad%2Ch_750%2Cw_600%2Fauto-orient%2C1%2Fquality%2CQ_80&fbclid=IwAR2OHumYTFycgOIHx5T56pywR5W9Ixk735sBlyxgvs92ueDE5KLBheXCv-A" alt="footer-product">
                 </div>
                 <div class="footer-producto">
                     <p>Descripcion del producto</p>
-                    <img src="" alt="footer-product">
+                    <img src="https://ithk-pro-itmall-item.oss-cn-hongkong.aliyuncs.com/2/product/0ZXPTW252503HBKX/0ZXPTW252503HBKX-pdp-1.jpg?x-oss-process=image%2Fresize%2Cm_pad%2Ch_750%2Cw_600%2Fauto-orient%2C1%2Fquality%2CQ_80&fbclid=IwAR13phmA_sCu_CVWZRps21txYo396HBgyD1J7TQjueHO_epCVIdB0eckTRI" alt="footer-product">
                 </div>
             </div>
-        </footer>
+        </footer> -->
     </div>
 </body>
 </html>
