--- a/views/home.html
+++ b/views/home.html
@@ -5,13 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Kaisei+Opti&family=Oswald&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css">
         <link rel="stylesheet" href="css/styles.css">
     <title>Document</title>
 </head>
 <body class="homebody">
   <header class="headerhome">
-  <a href="/"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ60-A0FP2S-Axx385gkvGGhnUWl8uDxPWFWGuY3g4vjcCmukzr7eqArX_j6ibDO5YfMIE&usqp=CAU" alt="fotologo" class="imglogo"></a>
+  <a href="/"><p class="logo">HEAVENLY</p></a>
  <form class="searchbar">
     <input name="searchbarhome" type="text" class="searchbarhome" placeholder="Buscá por producto, marca, categoría ..."></form>
     <button type="submit"></button>
@@ -20,16 +21,15 @@
     <a class="solidbarhome"><i class="fas fa-bars"></i></a>
    <div class="loginregisterhome"><a class="loginhomebutton" href="/login">Login</a><a class="registerhomebutton" href="/register">/Register</a> <a class="shopiconhome" href="#"><i class="fas fa-shopping-basket"></i></a></div>
   </header>
-  <main>
     <section class="sliderhome"></section>
     <div class="containersliderhome">
       <ul class="sliderhome">
-        <li id="slide1"><img class="img1" src="https://ithk-pro-itmall-item.oss-cn-hongkong.aliyuncs.com/2/product/0ZXPTW252503HBKX/0ZXPTW252503HBKX-pdp-1.jpg?x-oss-process=image/resize,m_pad,h_750,w_600/auto-orient,1/quality,Q_80" alt="imagen1"></li>
-        <li id="slide2"><img class="img2" src="https://ithk-pro-itmall-item.oss-cn-hongkong.aliyuncs.com/2/product/0ZXPTW252004HBKX/0ZXPTW252004HBKX-pdp-1.jpg?x-oss-process=image/resize,m_pad,h_750,w_600/auto-orient,1/quality,Q_80" alt="imagen2"></li>
-        <li id="slide3"><img class="img3" src="https://ithk-pro-itmall-item.oss-cn-hongkong.aliyuncs.com/2/product/0PXSPW253001HBLL/0PXSPW253001HBLL-pdp-1.jpg?x-oss-process=image/resize,m_pad,h_750,w_600/auto-orient,1/quality,Q_80" alt="imagen3"></li>
-        <li id="slide4"><img class="img4" src="https://ithk-pro-itmall-item.oss-cn-hongkong.aliyuncs.com/2/product/0PXSTW231001HBLZ/0PXSTW231001HBLZ-pdp-1.jpg?x-oss-process=image/resize,m_pad,h_750,w_600/auto-orient,1/quality,Q_80" alt="imagen4"></li>
-        <li id="slide5"><img class="img5" src="https://ithk-pro-itmall-item.oss-cn-hongkong.aliyuncs.com/2/product/0ZXPTM152017IBKX/0ZXPTM152017IBKX-pdp-2.jpg?x-oss-process=image/resize,m_pad,h_750,w_600/auto-orient,1/quality,Q_80" alt="imagen5"></li>
-        <li id="slide6"><img class="img6" src="https://ithk-pro-itmall-item.oss-cn-hongkong.aliyuncs.com/2/product/0ZXSWW215008IBKX/0ZXSWW215008IBKX-pdp-2.jpg?x-oss-process=image/resize,m_pad,h_750,w_600/auto-orient,1/quality,Q_80" alt="imagen6"></li>
+        <li id="slide1"><img class="img1" src="/img/img1.png" alt="imagen1"></li>
+        <li id="slide2"><img class="img2" src="/img/img2.png" alt="imagen2"></li>
+        <li id="slide3"><img class="img3" src="/img/img3.png" alt="imagen3"></li>
+        <li id="slide4"><img class="img4" src="/img/img4.png" alt="imagen4"></li>
+        <li id="slide5"><img class="img5" src="/img/img5.png" alt="imagen5"></li>
+        <li id="slide6"><img class="img6" src="/img/img6.png" alt="imagen6"></li>
       </ul>
       <ul class="menuhome">
 <li><a href="#slide1">1</a></li>
@@ -40,8 +40,14 @@
 <li><a href="#slide6">6</a></li>
       </ul>
     </div>
-    <section class="productoshome"></section>
-  </main>
+    <section class="productoshome">
+      <article><img src="/img/img1.png" alt="product1"><p class="nameemp">Heavenly</p><p class="namecloth"></p><p class="price">$1750</p></article>
+      <article><img src="/img/img2.png" alt="product2"><p class="nameemp">Heavenly</p><p class="namecloth"></p><p class="price">$2000</p></article>
+      <article><img src="/img/img3.png" alt="product3"><p class="nameemp">Heavenly</p><p class="namecloth"></p><p class="price">$1550</p></article>
+      <article><img src="/img/img4.png" alt="product4"><p class="nameemp">Heavenly</p><p class="namecloth"></p><p class="price">$1800</p></article>
+      <article><img src="/img/img5.png" alt="product5"><p class="nameemp">Heavenly</p><p class="namecloth"></p><p class="price">$2000</p></article>
+      <article><img src="/img/img6.png" alt="product6"><p class="nameemp">Heavenly</p><p class="namecloth"></p><p class="price">$3250</p></article>
+    </section>
     <footer></footer>
 </body>
 </html> 
