new: Boton menu

--- a/views/carrito.html
+++ b/views/carrito.html
@@ -11,11 +11,22 @@
 <body>
     <div class="container">    
         <header>
-            <div class="header-carrito">
-                <i class="fa-solid fa-align-justify"></i>
-                <div>logo</div>
+            <div class="header-carrito">           
                 <div class="main-carrito-encabezado">
-                    <h1 class="main-carrito-titulo">Productos</h1>
+                <!-- <img src="https://upload.wikimedia.org/wikipedia/commons/b/b2/Hamburger_icon.svg" class="hamburguer" alt=""> -->
+                <div class="dropdown">
+                    <div class="projects">
+                      <button>Menu</button>               
+                        <ul>
+                            <li><a href="">Productos</a></li>
+                            <li><a href="./home.html">Principal</a></li>
+                            <li><a href="./login.html">Log-in</a></li>
+                            <li><a href="#">Sobre Nosotros</a></li>
+                        </ul>
+                    </div>
+                </div>
+
+                <h1 class="main-carrito-titulo">Productos</h1>
     
                 </div>
             </div>
@@ -27,23 +38,23 @@
                 <div class="main-productos">
                     <div class="main-carrito-descripcion">
                         <img src="https://ithk-pro-itmall-item.oss-cn-hongkong.aliyuncs.com/2/product/0ZXPTW252004HBKX/0ZXPTW252004HBKX-pdp-1.jpg?x-oss-process=image%2Fresize%2Cm_pad%2Ch_750%2Cw_600%2Fauto-orient%2C1%2Fquality%2CQ_80&fbclid=IwAR2OHumYTFycgOIHx5T56pywR5W9Ixk735sBlyxgvs92ueDE5KLBheXCv-A" alt="img">
-                        <p>Descripcion</p>
-                        <p>Precio</p>
+                        <p>Sudadera deportiva color vinotinto y negro</p>
+                        <p>$29</p>
                     </div>
                     <div class="main-carrito-descripcion">
                         <img src="https://ithk-pro-itmall-item.oss-cn-hongkong.aliyuncs.com/2/product/0ZXPTW252503HBKX/0ZXPTW252503HBKX-pdp-1.jpg?x-oss-process=image%2Fresize%2Cm_pad%2Ch_750%2Cw_600%2Fauto-orient%2C1%2Fquality%2CQ_80&fbclid=IwAR13phmA_sCu_CVWZRps21txYo396HBgyD1J7TQjueHO_epCVIdB0eckTRI" alt="img">
-                        <p>Descripcion</p>
-                        <p>Precio</p>
+                        <p>Pantalon deportivo azul oscuro</p>
+                        <p>$30</p>
                     </div>
                     <div class="main-carrito-descripcion">
                         <img src="https://ithk-pro-itmall-item.oss-cn-hongkong.aliyuncs.com/2/product/0PXSPW253001HBLL/0PXSPW253001HBLL-pdp-1.jpg?x-oss-process=image%2Fresize%2Cm_pad%2Ch_750%2Cw_600%2Fauto-orient%2C1%2Fquality%2CQ_80&fbclid=IwAR3WQRxHWMXP937Wv_q0sd4GGPP-vdX6mUDdND4oz_lu11ICAX20vQiKuxo" alt="img">
-                        <p>Descripcion</p>
-                        <p>Precio</p>
+                        <p>Short dama azul cielo</p>
+                        <p>$20</p>
                     </div> 
                     <div class="main-carrito-descripcion">
                         <img src="https://ithk-pro-itmall-item.oss-cn-hongkong.aliyuncs.com/2/product/0PXSTW231001HBLZ/0PXSTW231001HBLZ-pdp-1.jpg?x-oss-process=image%2Fresize%2Cm_pad%2Ch_750%2Cw_600%2Fauto-orient%2C1%2Fquality%2CQ_80&fbclid=IwAR0cxfEatOEQg8M6AdlSzSWjonVou9gXkpPsLzE6pJf27v-Q0wBYot15JAY" alt="img">
-                        <p>Descripcion</p>
-                        <p>Precio</p>
+                        <p>Camisa leñera a cuadros</p>
+                        <p>$40</p>
                     </div>
                     <div class="main-carrito-descripcion">
                         <img src="https://ithk-pro-itmall-item.oss-cn-hongkong.aliyuncs.com/2/product/0PXSTW231001HBLZ/0PXSTW231001HBLZ-pdp-1.jpg?x-oss-process=image%2Fresize%2Cm_pad%2Ch_750%2Cw_600%2Fauto-orient%2C1%2Fquality%2CQ_80&fbclid=IwAR0cxfEatOEQg8M6AdlSzSWjonVou9gXkpPsLzE6pJf27v-Q0wBYot15JAY" alt="img">
@@ -73,7 +84,7 @@
                 </div>
             </div>     
         </main>
-        <footer class="footer-recomendados">
+        <!-- <footer class="footer-recomendados">
             <h2>Productos recomendados</h2>
             <div class="footer-slider">
             <ul class="footer-productos">
@@ -91,9 +102,9 @@
                 </li>
             </ul>
         </div>
-        </footer>
+        </footer> -->
 
-        <!-- <footer class="footer-recomendados">
+        <footer class="footer-recomendados">
             <h2>Productos recomendados</h2>
             <div class="footer-productos">
                 <div class="footer-producto">
@@ -109,7 +120,8 @@
                     <img src="https://ithk-pro-itmall-item.oss-cn-hongkong.aliyuncs.com/2/product/0ZXPTW252503HBKX/0ZXPTW252503HBKX-pdp-1.jpg?x-oss-process=image%2Fresize%2Cm_pad%2Ch_750%2Cw_600%2Fauto-orient%2C1%2Fquality%2CQ_80&fbclid=IwAR13phmA_sCu_CVWZRps21txYo396HBgyD1J7TQjueHO_epCVIdB0eckTRI" alt="footer-product">
                 </div>
             </div>
-        </footer> -->
+        </footer>
     </div>
+    <script src="../menu.js"></script>
 </body>
 </html>
