--- a/public/css/carritoStyles.css
+++ b/public/css/carritoStyles.css
@@ -9,6 +9,7 @@
     --verde :#16a085;
     --verde-claro:#afede1;
     --gris-primario :#a7a7a8;
+    --gris-secundario-btn:#464d62;
 
 }
 html{
@@ -24,6 +25,7 @@ html{
 
 header{
     grid-column: 1/4;
+    position: relative;
     
 }
 
@@ -79,7 +81,8 @@ header .header-carrito{
     box-shadow: 0px 10px 10px -6px var(--verde);
     display: flex;
     flex-direction: column;
-    width: 50%;
+    width: 90%;
+    height: 100%;
     justify-content: center;
     align-items: center;
     margin-bottom: 1rem;
@@ -114,7 +117,7 @@ header .header-carrito{
     width: 50%;
     height: 50%;
 }  
-/* 
+
 .footer-recomendados{
     display: flex;
     flex-direction: column;
@@ -139,6 +142,85 @@ header .header-carrito{
     text-align: center;
     box-shadow: 0px 10px 10px -6px black;
 
-}*/
+}
 
+/* /////////////// */
+.dropdown {
+    position: absolute;
+    right: 0;
+    top: 0;
+    height: 50px;
+    width: 60%;
+    margin: auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .projects {
+    position: absolute;
+    width: 100px;
+    height: 50px;
+    align-items:center;
+    right: 0;
+
+  }
+  
+  .projects ul {
+    margin-top: 30px;
+    position: absolute;
+    display: flex;
+    justify-content: space-around;
+    flex-direction: column;
+    align-items: center;
+    width: 100px;
+    height: 50px;
+    background: white;
+    right: 0;
+    list-style: none;
+    border-radius: 5px;
+    opacity: 0;
+    pointer-events: none;
+    transform: translateY(-10px);
+    transition: all 0.4s ease;
+  }
+  .projects li
+   {
+    width: 100%;
+    height: 100%;
+    display: flex;
+
+  }
+  
+  .projects li:hover {
+    background-color: rgb(197, 173, 181);
+  }
+  
+  .projects ul li a
+   {
+    color:black;
+    text-decoration: none;
+    pointer-events: all;
+  }
+  
+  .dropdown button
+   {
+    /* background: none;
+    text-decoration: none;
+    border: none; */
+    position: absolute;
+    right: 0;
+    color: white;
+    background-color:var(--gris-secundario-btn);
+    font-size: 18px;
+    cursor: pointer;
+    border-radius: 5px;
+  }
+  
+  .projects button:focus + ul
+   {
+    opacity: 1;
+    pointer-events: all;
+    transform: translateY(0px);
+  }
 
