--- a/views/carrito.html
+++ b/views/carrito.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/carritoStyles.css">
+    <link rel="stylesheet" media="(max-width: 600px)" href="css/carritoStyles.css" />
+    <link rel="stylesheet" media="(min-width:600px)" href="css/carritoPcStyles.css">
     <link rel="stylesheet" href="https://fontawesome.com/icons/">
     <title>Document</title>
 </head>
@@ -59,9 +60,44 @@
        
 
                 </div>
-            </div>     
+            </div> 
+            <div class="footer-recomendados">
+                <h2>Productos recomendados</h2>
+                <div class="footer-slider">
+                <ul class="footer-productos">
+                    <li class="footer-producto">    
+                        
+                        <img src="https://ithk-pro-itmall-item.oss-cn-hongkong.aliyuncs.com/2/product/0PXSTW231001HBLZ/0PXSTW231001HBLZ-pdp-1.jpg?x-oss-process=image%2Fresize%2Cm_pad%2Ch_750%2Cw_600%2Fauto-orient%2C1%2Fquality%2CQ_80&fbclid=IwAR0cxfEatOEQg8M6AdlSzSWjonVou9gXkpPsLzE6pJf27v-Q0wBYot15JAY" alt="footer-product">
+                    </li>
+                    <li class="footer-producto">
+                      
+                        <img src="https://ithk-pro-itmall-item.oss-cn-hongkong.aliyuncs.com/2/product/0ZXPTW252004HBKX/0ZXPTW252004HBKX-pdp-1.jpg?x-oss-process=image%2Fresize%2Cm_pad%2Ch_750%2Cw_600%2Fauto-orient%2C1%2Fquality%2CQ_80&fbclid=IwAR2OHumYTFycgOIHx5T56pywR5W9Ixk735sBlyxgvs92ueDE5KLBheXCv-A" alt="footer-product">
+                    </li>
+                    <li class="footer-producto">
+                   
+                        <img src="https://ithk-pro-itmall-item.oss-cn-hongkong.aliyuncs.com/2/product/0ZXPTW252503HBKX/0ZXPTW252503HBKX-pdp-1.jpg?x-oss-process=image%2Fresize%2Cm_pad%2Ch_750%2Cw_600%2Fauto-orient%2C1%2Fquality%2CQ_80&fbclid=IwAR13phmA_sCu_CVWZRps21txYo396HBgyD1J7TQjueHO_epCVIdB0eckTRI" alt="footer-product">
+                    </li>
+                    <li class="footer-producto">
+                   
+                        <img src="https://ithk-pro-itmall-item.oss-cn-hongkong.aliyuncs.com/2/product/0ZXPTW252503HBKX/0ZXPTW252503HBKX-pdp-1.jpg?x-oss-process=image%2Fresize%2Cm_pad%2Ch_750%2Cw_600%2Fauto-orient%2C1%2Fquality%2CQ_80&fbclid=IwAR13phmA_sCu_CVWZRps21txYo396HBgyD1J7TQjueHO_epCVIdB0eckTRI" alt="footer-product">
+                    </li>
+                    <li class="footer-producto">
+                   
+                        <img src="https://ithk-pro-itmall-item.oss-cn-hongkong.aliyuncs.com/2/product/0ZXPTW252503HBKX/0ZXPTW252503HBKX-pdp-1.jpg?x-oss-process=image%2Fresize%2Cm_pad%2Ch_750%2Cw_600%2Fauto-orient%2C1%2Fquality%2CQ_80&fbclid=IwAR13phmA_sCu_CVWZRps21txYo396HBgyD1J7TQjueHO_epCVIdB0eckTRI" alt="footer-product">
+                    </li>
+                    <li class="footer-producto">
+                   
+                        <img src="https://ithk-pro-itmall-item.oss-cn-hongkong.aliyuncs.com/2/product/0ZXPTW252503HBKX/0ZXPTW252503HBKX-pdp-1.jpg?x-oss-process=image%2Fresize%2Cm_pad%2Ch_750%2Cw_600%2Fauto-orient%2C1%2Fquality%2CQ_80&fbclid=IwAR13phmA_sCu_CVWZRps21txYo396HBgyD1J7TQjueHO_epCVIdB0eckTRI" alt="footer-product">
+                    </li>
+                    <li class="footer-producto">
+                   
+                        <img src="https://ithk-pro-itmall-item.oss-cn-hongkong.aliyuncs.com/2/product/0ZXPTW252503HBKX/0ZXPTW252503HBKX-pdp-1.jpg?x-oss-process=image%2Fresize%2Cm_pad%2Ch_750%2Cw_600%2Fauto-orient%2C1%2Fquality%2CQ_80&fbclid=IwAR13phmA_sCu_CVWZRps21txYo396HBgyD1J7TQjueHO_epCVIdB0eckTRI" alt="footer-product">
+                    </li>
+                </ul>
+            </div>
+        </div>    
         </main>
-        <!-- <footer class="footer-recomendados">
+        <!-- <div class="footer-recomendados">
             <h2>Productos recomendados</h2>
             <div class="footer-slider">
             <ul class="footer-productos">
@@ -77,11 +113,26 @@
                
                     <img src="https://ithk-pro-itmall-item.oss-cn-hongkong.aliyuncs.com/2/product/0ZXPTW252503HBKX/0ZXPTW252503HBKX-pdp-1.jpg?x-oss-process=image%2Fresize%2Cm_pad%2Ch_750%2Cw_600%2Fauto-orient%2C1%2Fquality%2CQ_80&fbclid=IwAR13phmA_sCu_CVWZRps21txYo396HBgyD1J7TQjueHO_epCVIdB0eckTRI" alt="footer-product">
                 </li>
+                <li class="footer-producto">
+               
+                    <img src="https://ithk-pro-itmall-item.oss-cn-hongkong.aliyuncs.com/2/product/0ZXPTW252503HBKX/0ZXPTW252503HBKX-pdp-1.jpg?x-oss-process=image%2Fresize%2Cm_pad%2Ch_750%2Cw_600%2Fauto-orient%2C1%2Fquality%2CQ_80&fbclid=IwAR13phmA_sCu_CVWZRps21txYo396HBgyD1J7TQjueHO_epCVIdB0eckTRI" alt="footer-product">
+                </li>
+                <li class="footer-producto">
+               
+                    <img src="https://ithk-pro-itmall-item.oss-cn-hongkong.aliyuncs.com/2/product/0ZXPTW252503HBKX/0ZXPTW252503HBKX-pdp-1.jpg?x-oss-process=image%2Fresize%2Cm_pad%2Ch_750%2Cw_600%2Fauto-orient%2C1%2Fquality%2CQ_80&fbclid=IwAR13phmA_sCu_CVWZRps21txYo396HBgyD1J7TQjueHO_epCVIdB0eckTRI" alt="footer-product">
+                </li>
+                <li class="footer-producto">
+               
+                    <img src="https://ithk-pro-itmall-item.oss-cn-hongkong.aliyuncs.com/2/product/0ZXPTW252503HBKX/0ZXPTW252503HBKX-pdp-1.jpg?x-oss-process=image%2Fresize%2Cm_pad%2Ch_750%2Cw_600%2Fauto-orient%2C1%2Fquality%2CQ_80&fbclid=IwAR13phmA_sCu_CVWZRps21txYo396HBgyD1J7TQjueHO_epCVIdB0eckTRI" alt="footer-product">
+                </li>
+                <li class="footer-producto">
+               
+                    <img src="https://ithk-pro-itmall-item.oss-cn-hongkong.aliyuncs.com/2/product/0ZXPTW252503HBKX/0ZXPTW252503HBKX-pdp-1.jpg?x-oss-process=image%2Fresize%2Cm_pad%2Ch_750%2Cw_600%2Fauto-orient%2C1%2Fquality%2CQ_80&fbclid=IwAR13phmA_sCu_CVWZRps21txYo396HBgyD1J7TQjueHO_epCVIdB0eckTRI" alt="footer-product">
+                </li>
             </ul>
         </div>
-        </footer> -->
-
-        <footer class="footer-recomendados">
+    </div> -->
+        <!-- <div class="footer-recomendados">
             <h2>Productos recomendados</h2>
             <div class="footer-productos">
                 <div class="footer-producto">
@@ -97,8 +148,12 @@
                     <img src="https://ithk-pro-itmall-item.oss-cn-hongkong.aliyuncs.com/2/product/0ZXPTW252503HBKX/0ZXPTW252503HBKX-pdp-1.jpg?x-oss-process=image%2Fresize%2Cm_pad%2Ch_750%2Cw_600%2Fauto-orient%2C1%2Fquality%2CQ_80&fbclid=IwAR13phmA_sCu_CVWZRps21txYo396HBgyD1J7TQjueHO_epCVIdB0eckTRI" alt="footer-product">
                 </div>
             </div>
+        </div> -->
+
+        <footer >
+
         </footer>
     </div>
-    <script src="../menu.js"></script>
+
 </body>
 </html>
